--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <div class="background-container">
     <!-- Seção Head -->
     <section class="head-section">
-      <img src="../static/img/logo head.png" alt="Logo" class="logo-head" />
-      <img src="../static/img/Head.png" alt="Cabeçalho" class="head-image" />
+      <img src="logo head.png" alt="Logo" class="logo-head" />
+      <img src="Head.png" alt="Cabeçalho" class="head-image" />
       <div class="headline">
         <h1>VOCÊ NÃO ESTÁ EXAGERANDO. ESSA DOR É REAL</h1>
         <p>e pode ser curada.</p>
@@ -23,7 +23,7 @@
 
     <!-- Divisória -->
     <div class="divider">
-      <img src="../static/img/Barra.png" alt="Divisória" />
+      <img src="Barra.png" alt="Divisória" />
     </div>
 
     <!-- Texto central -->
@@ -37,16 +37,14 @@
         Com escuta real, acolhimento profundo e um caminho seguro de transformação emocional.<br/><br/>
 
         Se você sente que carrega uma dor invisível, esse pode ser o seu primeiro passo pra respirar em paz.
-        
-        Clique abaixo e agende o seu encontro comigo.
       </p>
     </section>
 
     <div class="cta-section">
         <p class="cta-instruction">Clique abaixo e agende o seu encontro comigo.</p>
-        <a href="https://wa.me/SEUNUMEROAQUI?text=Olá,%20quero%20agendar%20um%20encontro%20com%20a%20Rose" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.link/i4yxou" target="_blank" rel="noopener noreferrer">
           <div class="cta-button">
-            <img src="{{ url_for('static', filename='img/CTA.png') }}" alt="Botão CTA">
+            <img src="{{ url_for('static', filename='CTA.png') }}" alt="Botão CTA">
           </div>
         </a>
       </div>
