--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
 
 <!-- Rodapé -->
 <footer class="footer">
-    <img src="../static/img/Caixa de CTA.png" alt="Fundo Rodapé" class="footer-bg" />
+    <img src="Caixa de CTA.png" alt="Fundo Rodapé" class="footer-bg" />
     
     <div class="footer-overlay">
-      <img src="../static/img/Bege-11.png" alt="Logo Footer" class="footer-logo" />
+      <img src="Bege-11.png" alt="Logo Footer" class="footer-logo" />
       <p>Todos direitos reservados - 2025<br/>
       Atendimento sigiloso e respeitoso | Método validado</p>
     </div>
