--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="background-container">
     <!-- Seção Head -->
     <section class="head-section">
-      <img src="logo head.png" alt="Logo" class="logo-head" />
+      <img src="Logo head.png" alt="Logo" class="logo-head" />
       <img src="Head.png" alt="Cabeçalho" class="head-image" />
       <div class="headline">
         <h1>VOCÊ NÃO ESTÁ EXAGERANDO. ESSA DOR É REAL</h1>
@@ -44,7 +44,7 @@
         <p class="cta-instruction">Clique abaixo e agende o seu encontro comigo.</p>
         <a href="https://wa.link/i4yxou" target="_blank" rel="noopener noreferrer">
           <div class="cta-button">
-            <img src="{{ url_for('static', filename='CTA.png') }}" alt="Botão CTA">
+            <img src="CTA.png" alt="Botão CTA">
           </div>
         </a>
       </div>
