--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Fundo -->
-  <div class="background-container">
+  <div class="background-container" style="background: url('Fundo.png') center center / cover no-repeat, #3570a1;">
     <!-- Seção Head -->
     <section class="head-section">
       <img src="Logo head.png" alt="Logo" class="logo-head" />
