--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
 
     <!-- Divisória -->
     <div class="divider">
-      <img src="Barra.png" alt="Divisória" />
-    </div>
+  <div class="scrolling-bar">
+    <img src="Barra.png" alt="Barra" />
+    <img src="Barra.png" alt="Barra" />
+  </div>
+</div>
 
     <!-- Texto central -->
     <section class="texto-central">
