--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
    <div class="divider">
   <div class="scrolling-bar">
     <img src="Barra.png" alt="Barra" />
+    <img src="Barra.png" alt="Barra" />
   </div>
 </div>
+
 
     <!-- Texto central -->
     <section class="texto-central">
