--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
     <section class="texto-central">
       <p>
         A Terapia TRG não apaga sua história, ela cura as feridas que ficaram.<br/>
-        Com escuta real, acolhimento profundo e um caminho seguro de transformação emocional.<br/><br/>
 
-        Se você sente que carrega uma dor invisível, esse pode ser o seu primeiro passo pra respirar em paz.
+        Com escuta real, acolhimento profundo e um caminho seguro de transformação emocional.
       </p>
     </section>
 
