--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="background-container" style="background: url('Fundo.png') center center / cover no-repeat, #3570a1;">
     <!-- Seção Head -->
     <section class="head-section">
-      <img src="Logo head.png" alt="Logo" class="logo-head" />
+      <img src="Bege-11.png" alt="Logo" class="logo-head" />
       <img src="Head.png" alt="Cabeçalho" class="head-image" />
       <div class="headline">
         <h1>VOCÊ NÃO ESTÁ EXAGERANDO. ESSA DOR É REAL</h1>
