--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@ src="https://www.facebook.com/tr?id=1717978578808656&ev=PageView&noscript=1"
     </section>
 
     <div class="cta-section">
-        <p class="cta-instruction">Clique abaixo e agende o seu encontro comigo.</p>
-        <a href="https://wa.link/i4yxou" target="_blank" rel="noopener noreferrer">
-          <div class="cta-button">
-            <img src="CTA.png" alt="Botão CTA">
-          </div>
-        </a>
+        <a href="https://wa.me/5595999772567?text=Olá%2C+quero+falar+sobre+a+Terapia+TRG&utm_source=site&utm_medium=botao&utm_campaign=contato"
+           onclick="fbq('track', 'Contact');" 
+           target="_blank" rel="noopener noreferrer">
+    <div class="cta-button">
+      <img src="CTA.png" alt="Botão CTA">
+    </div>
+         </a>
       </div>
             
       
